--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -17,6 +17,8 @@
     <script type="text/javascript" th:src="@{/js/admin/basic.js}"></script>
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script>
+가        let query = '';
+
         function sample6_execDaumPostcode() {
             new daum.Postcode({
                 oncomplete: function (data) {
@@ -59,6 +61,7 @@
                     // 우편번호와 주소 정보를 해당 필드에 넣는다.
                     document.getElementById('sample6_postcode').value = data.zonecode;
                     document.getElementById("sample6_address").value = addr;
+                    query = data.query;
                     // 커서를 상세주소 필드로 이동한다.
                     document.getElementById("sample6_detailAddress").focus();
                 }
@@ -79,7 +82,7 @@
 
             $.ajax({
                 type: 'GET',
-정                url: `/api/general/categories`,
+                url: `/api/general/categories`,
                 success: function (response, status) {
                     console.log(response)
                     if (status === 'success') {
@@ -172,6 +175,48 @@
                         </div>
                     </div>`
         }
+
+        function createSellerRequest() {
+            let username = $('#username').val();
+            let name = $('#name').val();
+            let email = $('#email').val();
+            let phoneNumber = $('#phoneNumber').val();
+            let businessLicenseNo = $('#businessLicenseNo').val();
+            let restaurantName = $('#restaurantName').val();
+            let categories = $('#categories').val();
+            let description = $('#description').val();
+            let zipCode = $('#sample6_postcode').val();
+            let address = $('#sample6_address').val();
+            let detailAddress = $('#sample6_detailAddress').val();
+
+            $.ajax({
+                type: 'POST',
+                url: `/api/seller/demand`,
+                contentType: "application/json",
+                data: JSON.stringify({
+                    username: username,
+                    name: name,
+                    email: email,
+                    phoneNumber: phoneNumber,
+                    businessLicenseNo: businessLicenseNo,
+                    restaurantName: restaurantName,
+                    categories: categories,
+                    description: description,
+                    zipCode: zipCode,
+                    address: address,
+                    detailAddress: detailAddress,
+                    query: query
+                }),
+                success: function (response) {
+                    alert("판매자 요청 완료")
+                    window.location.reload();
+                },
+                error(error, response) {
+                    console.log(this.data);
+                    console.error(error);
+                }
+            })
+        }
     </script>
     <title>Register</title>
 </head>
@@ -181,91 +226,91 @@
         <h1>Register Page</h1>
     </header>
     <!--<h1>Register Page</h1>-->
-    <form action="/signup" method="post" class="register-wrap">
-        <h2 style="color: #8B60C7; width: 90%; margin: 5px auto 5px auto">기본 정보</h2>
-        <div class="input-group flex-nowrap">
-            <span class="input-group-text">ID</span>
-            <input type="text" id="username" class="form-control" placeholder="Username" aria-label="Username"
-                   aria-describedby="addon-wrapping">
-        </div>
-        <!--        <input type="text" id="username" name="username" class="register-input" placeholder="Username">-->
-        <div class="input-group flex-nowrap">
-            <span class="input-group-text">이름</span>
-            <input type="text" id="name" class="form-control" placeholder="Name" aria-label="Name"
-                   aria-describedby="addon-wrapping">
-        </div>
-        <!--        <input type="text" id="name" name="name" class="register-input" placeholder="name">-->
-        <div class="input-group flex-nowrap">
-            <span class="input-group-text">Email</span>
-            <input type="text" id="email" class="form-control" placeholder="Email" aria-label="Email"
-                   aria-describedby="addon-wrapping">
-        </div>
-        <!--        <input type="email" id="email" name="email" class="register-input" placeholder="Email">-->
-        <div class="input-group flex-nowrap">
-            <span class="input-group-text">전화번호</span>
-            <input type="text" id="phoneNumber" class="form-control" placeholder="PhoneNumber" aria-label="PhoneNumber"
-                   aria-describedby="addon-wrapping">
-        </div>
-        <div class="input-group flex-nowrap">
-            <span class="input-group-text">사업자번호</span>
-            <input type="text" id="businessLicenseNo" class="form-control" placeholder="BusinessLicenseNo"
-                   aria-label="BusinessLicenseNo" aria-describedby="addon-wrapping">
-        </div>
-        <!--        <input type="text" id="phoneNumber" name="phoneNumber" class="register-input" placeholder="phoneNumber">-->
-        <br>
-        <h2 style="color: #8B60C7; width: 90%; margin: 5px auto 5px auto">레스토랑 정보</h2>
-        <div class="input-group flex-nowrap">
-            <span class="input-group-text">가게명</span>
-            <input type="text" id="restaurantName" class="form-control" placeholder="RestaurantName"
-                   aria-label="RestaurantName" aria-describedby="addon-wrapping">
-        </div>
-        <!--        <input type="text" id="restaurantName" name="restaurantName" class="register-input"-->
-        <!--               placeholder="restaurantName">-->
-        <div class="input-group flex-nowrap">
-            <span class="input-group-text">카테고리</span>
-            <input type="text" id="categories" class="form-control" placeholder="Categories" aria-label="Categories"
-                   aria-describedby="addon-wrapping" readonly>
-            <input onclick="openSelectCategory()" type="button" value="카테고리 선택">
-        </div>
-        <div class="selectCategoryBox">
-            <div class="selectParentCategoryBox"></div>
-            <div class="selectChildCategoryBox"></div>
-            <div class="selectGrandChildCategoryBox"></div>
-        </div>
-        <!--        <input type="text" id="categories" name="categories" class="register-input" placeholder="categories">-->
-        <div class="input-group flex-nowrap">
-            <span class="input-group-text">설명</span>
-            <input type="text" id="description" class="form-control" placeholder="Description" aria-label="Description"
-                   aria-describedby="addon-wrapping">
-        </div>
-        <!--        <input type="text" id="description" name="description" class="register-input" placeholder="description">-->
+    <!--    <form action="/signup" method="post" class="register-wrap">-->
+    <h2 style="color: #8B60C7; width: 90%; margin: 5px auto 5px auto">기본 정보</h2>
+    <div class="input-group flex-nowrap">
+        <span class="input-group-text">ID</span>
+        <input type="text" id="username" class="form-control" placeholder="Username" aria-label="Username"
+               aria-describedby="addon-wrapping">
+    </div>
+    <!--        <input type="text" id="username" name="username" class="register-input" placeholder="Username">-->
+    <div class="input-group flex-nowrap">
+        <span class="input-group-text">이름</span>
+        <input type="text" id="name" class="form-control" placeholder="Name" aria-label="Name"
+               aria-describedby="addon-wrapping">
+    </div>
+    <!--        <input type="text" id="name" name="name" class="register-input" placeholder="name">-->
+    <div class="input-group flex-nowrap">
+        <span class="input-group-text">Email</span>
+        <input type="text" id="email" class="form-control" placeholder="Email" aria-label="Email"
+               aria-describedby="addon-wrapping">
+    </div>
+    <!--        <input type="email" id="email" name="email" class="register-input" placeholder="Email">-->
+    <div class="input-group flex-nowrap">
+        <span class="input-group-text">전화번호</span>
+        <input type="text" id="phoneNumber" class="form-control" placeholder="PhoneNumber" aria-label="PhoneNumber"
+               aria-describedby="addon-wrapping">
+    </div>
+    <div class="input-group flex-nowrap">
+        <span class="input-group-text">사업자번호</span>
+        <input type="text" id="businessLicenseNo" class="form-control" placeholder="BusinessLicenseNo"
+               aria-label="BusinessLicenseNo" aria-describedby="addon-wrapping">
+    </div>
+    <!--        <input type="text" id="phoneNumber" name="phoneNumber" class="register-input" placeholder="phoneNumber">-->
+    <br>
+    <h2 style="color: #8B60C7; width: 90%; margin: 5px auto 5px auto">레스토랑 정보</h2>
+    <div class="input-group flex-nowrap">
+        <span class="input-group-text">가게명</span>
+        <input type="text" id="restaurantName" class="form-control" placeholder="RestaurantName"
+               aria-label="RestaurantName" aria-describedby="addon-wrapping">
+    </div>
+    <!--        <input type="text" id="restaurantName" name="restaurantName" class="register-input"-->
+    <!--               placeholder="restaurantName">-->
+    <div class="input-group flex-nowrap">
+        <span class="input-group-text">카테고리</span>
+        <input type="text" id="categories" class="form-control" placeholder="Categories" aria-label="Categories"
+               aria-describedby="addon-wrapping" readonly>
+        <input onclick="openSelectCategory()" type="button" value="카테고리 선택">
+    </div>
+    <div class="selectCategoryBox">
+        <div class="selectParentCategoryBox"></div>
+        <div class="selectChildCategoryBox"></div>
+        <div class="selectGrandChildCategoryBox"></div>
+    </div>
+    <!--        <input type="text" id="categories" name="categories" class="register-input" placeholder="categories">-->
+    <div class="input-group flex-nowrap">
+        <span class="input-group-text">설명</span>
+        <input type="text" id="description" class="form-control" placeholder="Description" aria-label="Description"
+               aria-describedby="addon-wrapping">
+    </div>
+    <!--        <input type="text" id="description" name="description" class="register-input" placeholder="description">-->
 
-        <!--        <input type="text" id="businessLicenseNo" name="businessLicenseNo" class="register-input"-->
-        <!--               placeholder="businessLicenseNo">-->
+    <!--        <input type="text" id="businessLicenseNo" name="businessLicenseNo" class="register-input"-->
+    <!--               placeholder="businessLicenseNo">-->
 
-        <div class="input-group flex-nowrap">
-            <span class="input-group-text">우편번호</span>
-            <input type="text" id="sample6_postcode" class="form-control" placeholder="우편번호" aria-label="Postcode"
-                   aria-describedby="addon-wrapping">
-            <input onclick="sample6_execDaumPostcode()" type="button" value="우편번호 찾기">
-        </div>
-        <div class="input-group flex-nowrap">
-            <span class="input-group-text">주소</span>
-            <input type="text" id="sample6_address" class="form-control" placeholder="주소" aria-label="Address"
-                   aria-describedby="addon-wrapping">
-        </div>
-        <div class="input-group flex-nowrap">
-            <span class="input-group-text">상세주소</span>
-            <input type="text" id="sample6_detailAddress" class="form-control" placeholder="상세주소"
-                   aria-label="DetailAddress" aria-describedby="addon-wrapping">
-        </div>
-        <!--        <input type="text" id="province" name="province" class="register-input" placeholder="province">-->
-        <!--        <input type="text" id="city" name="city" class="register-input" placeholder="city">-->
-        <!--        <input type="text" id="street" name="street" class="register-input" placeholder="street">-->
-        <!--        <input type="text" id="searchKeyWords" name="searchKeyWords" class="register-input"-->
-        <!--               placeholder="searchKeyWords">-->
-        <button type="submit" class="login-btn">등록</button>
-    </form>
+    <div class="input-group flex-nowrap">
+        <span class="input-group-text">우편번호</span>
+        <input type="text" id="sample6_postcode" class="form-control" placeholder="우편번호" aria-label="Postcode"
+               aria-describedby="addon-wrapping">
+        <input onclick="sample6_execDaumPostcode()" type="button" value="우편번호 찾기">
+    </div>
+    <div class="input-group flex-nowrap">
+        <span class="input-group-text">주소</span>
+        <input type="text" id="sample6_address" class="form-control" placeholder="주소" aria-label="Address"
+               aria-describedby="addon-wrapping">
+    </div>
+    <div class="input-group flex-nowrap">
+        <span class="input-group-text">상세주소</span>
+        <input type="text" id="sample6_detailAddress" class="form-control" placeholder="상세주소"
+               aria-label="DetailAddress" aria-describedby="addon-wrapping">
+    </div>
+    <!--        <input type="text" id="province" name="province" class="register-input" placeholder="province">-->
+    <!--        <input type="text" id="city" name="city" class="register-input" placeholder="city">-->
+    <!--        <input type="text" id="street" name="street" class="register-input" placeholder="street">-->
+    <!--        <input type="text" id="searchKeyWords" name="searchKeyWords" class="register-input"-->
+    <!--               placeholder="searchKeyWords">-->
+    <button onclick="createSellerRequest()" type="submit" class="login-btn">등록</button>
+    <!--    </form>-->
 </div>
 </body>
 </html>
