[fix] 판매자요청에 searchKeywords 필드 삭제

--- a/src/main/resources/templates/admin/seller-management.html
+++ b/src/main/resources/templates/admin/seller-management.html
@@ -120,7 +120,7 @@
                 <th scope="col">상태</th>
                 <th scope="col">설명</th>
                 <th scope="col">카테고리</th>
-                <th scope="col">키워드</th>
+                <!--                <th scope="col">키워드</th>-->
                 <th scope="col">사업자번호</th>
                 <th scope="col">주소</th>
                 <th scope="col"></th>
@@ -138,7 +138,7 @@
                     <td th:text="${requestSeller.status}"></td>
                     <td th:text="${requestSeller.description}"></td>
                     <td th:text="${requestSeller.categories}"></td>
-                    <td th:text="${requestSeller.searchKeyWords}"></td>
+                    <!--                    <td th:text="${requestSeller.searchKeyWords}"></td>-->
                     <td th:text="${requestSeller.businessLicenseNo}"></td>
                     <td th:text="${requestSeller.address} + ' ' + ${requestSeller.detailAddress}"></td>
                     <td>
