[fix] Restaurant 엔티티에 category 필드 삭제

--- a/src/main/resources/templates/admin/restaurant-list.html
+++ b/src/main/resources/templates/admin/restaurant-list.html
@@ -104,7 +104,7 @@
                 <th scope="col">이미지</th>
                 <th scope="col">매장번호</th>
                 <th scope="col">설명</th>
-                <th scope="col">카테고리</th>
+                <!--                <th scope="col">카테고리</th>-->
                 <th scope="col">키워드</th>
                 <th scope="col">사업자번호</th>
                 <th scope="col">주소</th>
@@ -121,7 +121,7 @@
                     <td th:text="${restaurant.images}"></td>
                     <td th:text="${restaurant.phoneNumber}"></td>
                     <td th:text="${restaurant.description}"></td>
-                    <td th:text="${restaurant.category}"></td>
+                    <!--                    <td th:text="${restaurant.category}"></td>-->
                     <td th:text="${restaurant.searchKeywords}"></td>
                     <td th:text="${restaurant.businessNo}"></td>
                     <td th:text="${restaurant.address} + ' ' + ${restaurant.detailAddress}"></td>
