[fix] 사업자번호 패턴검증 추가

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -17,7 +17,7 @@
     <script type="text/javascript" th:src="@{/js/admin/basic.js}"></script>
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script>
-가        let query = '';
+        let query = '';
 
         function sample6_execDaumPostcode() {
             new daum.Postcode({
@@ -253,7 +253,7 @@
     </div>
     <div class="input-group flex-nowrap">
         <span class="input-group-text">사업자번호</span>
-        <input type="text" id="businessLicenseNo" class="form-control" placeholder="BusinessLicenseNo"
+        <input type="text" id="businessLicenseNo" class="form-control" placeholder="ex) 000-00-00000"
                aria-label="BusinessLicenseNo" aria-describedby="addon-wrapping">
     </div>
     <!--        <input type="text" id="phoneNumber" name="phoneNumber" class="register-input" placeholder="phoneNumber">-->
