[fix] Category, Menu, Restaurant 엔티티 String 길이제한 추가

--- a/src/main/resources/templates/seller/lineup.html
+++ b/src/main/resources/templates/seller/lineup.html
@@ -38,8 +38,10 @@
 <div class="body">
     <div class="lineup-main">
         <h1 style="color: #8B60C7">줄서기 현황</h1>
-        <button type="button" onclick="openLineup()" class="btn">줄서기 오픈</button>
-        <button type="button" onclick="closeLineup()" class="btn">줄서기 마감</button>
+        <div class="lineup-button">
+            <button type="button" onclick="openLineup()" class="btn">줄서기 오픈</button>
+            <button type="button" onclick="closeLineup()" class="btn">줄서기 마감</button>
+        </div>
     </div>
     <div id="lineupList"></div>
 </div>
