[refactor] URL 변경 대응
URL 변경 대응

--- a/src/main/resources/templates/seller/blacklist-demand-list.html
+++ b/src/main/resources/templates/seller/blacklist-demand-list.html
@@ -28,7 +28,7 @@
 <script>
     function cancel(blacklistDemandId) {
         $.ajax({
-            url: `/blacklist-demands/${blacklistDemandId}`,
+            url: `/seller/blacklist-demands/${blacklistDemandId}`,
             type: 'DELETE',
             headers: {
                 'Authorization': localStorage.getItem('accessToken')
