[refactor] 포맷에 맞게 주소를 전체적으로 변경

--- a/src/main/resources/templates/event-create.html
+++ b/src/main/resources/templates/event-create.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>이벤트추가</h1>
-<form action="/event/new" method="post">
+<form action="/api/seller/event/new" method="post">
     <label for="name">name</label>
     <input type="text" id="name" name="name"><br>
     <label for="eventStartDate">eventStartDate</label>
