--- a/src/main/resources/templates/event-createcreator.html
+++ b/src/main/resources/templates/event-createcreator.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 <h1>쿠폰생성자추가</h1>
-<form th:action="@{/event/couponcreator/{eventId}(eventId=${eventId})}" method="post" enctype="multipart/form-data">
+<form th:action="@{/api/seller/event/couponcreator/{eventId}(eventId=${eventId})}" method="post"
+      enctype="multipart/form-data">
     <label for="name">name</label>
     <input type="text" id="name" name="name"><br>
     <label for="discountPrice">discountPrice</label>
