--- a/src/main/resources/templates/event-update.html
+++ b/src/main/resources/templates/event-update.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>이벤트수정</h1>
-<form th:action="@{/event/update/{eventId}(eventId=${eventId})}" method="post" enctype="multipart/form-data">
+<form th:action="@{/api/seller/event/update/{eventId}(eventId=${eventId})}" method="post" enctype="multipart/form-data">
     <input type="hidden" name="_method" value="PUT"/>
     <label for="name">name</label>
     <input type="text" id="name" name="name"><br>
