--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -29,16 +29,16 @@
 </header>
 <nav class="menus">
     <ul>
-        <a href="/seller/lineup-page">줄서기 현황</a>
-        <a href="/seller">매장 관리</a>
-        <a href="/menu" style="color: #8B60C7">메뉴</a>
-        <a href="/event">이벤트</a>
+        <a href="/seller/templates/lineup-page">줄서기 현황</a>
+        <a href="/seller/templates/seller" style="color: #8B60C7">매장 관리</a>
+        <a href="/seller/templates/menu">메뉴</a>
+        <a href="/seller/templates/event">이벤트</a>
     </ul>
 </nav>
 <div class="body">
     <div class="menu">
         <h1 style="color: #8B60C7">메뉴</h1>
-        <a href="/menu/new">
+        <a href="/seller/templates/menu/new">
             <button type="button" class="btn">메뉴추가</button>
         </a>
     </div>
@@ -63,12 +63,13 @@
                     <td th:text="${item.price}"></td>
                     <td th:text="${item.imageUrl}"></td>
                     <td>
-                        <a th:href="@{/menu/update/{menuId}(menuId=${item.menuId})}">
+                        <a th:href="@{/seller/templates/menu/update/{menuId}(menuId=${item.menuId})}">
                             <button type="button" class="btn">수정</button>
                         </a>
                     </td>
                     <td>
-                        <a th:href="@{/menu/delete/{menuId}(menuId=${item.menuId})}" th:method="delete">
+                        <a th:href="@{/seller/templates/menu/delete/{menuId}(menuId=${item.menuId})}"
+                           th:method="delete">
                             <button type="button" class="btn">삭제</button>
                         </a>
                     </td>
