--- a/src/main/resources/templates/seller.html
+++ b/src/main/resources/templates/seller.html
@@ -22,7 +22,7 @@
     <nav>
         <ul>
             <a href="/">판매자 님</a>
-            <a th:href="@{/seller/logout}" th:method="get" enctype="multipart/form-data">
+            <a th:href="@{/api/seller/logout}" th:method="get" enctype="multipart/form-data">
                 <button onclick="sendTokenLogout()" type="button" class="btn">Logout</button>
             </a>
         </ul>
@@ -30,10 +30,10 @@
 </header>
 <nav class="menus">
     <ul>
-        <a href="/seller/lineup-page">줄서기 현황</a>
-        <a href="/seller" style="color: #8B60C7">매장 관리</a>
-        <a href="/menu">메뉴</a>
-        <a href="/event">이벤트</a>
+        <a href="/seller/templates/lineup-page">줄서기 현황</a>
+        <a href="/seller/templates/seller" style="color: #8B60C7">매장 관리</a>
+        <a href="/seller/templates/menu">메뉴</a>
+        <a href="/seller/templates/event">이벤트</a>
     </ul>
 </nav>
 <div class="body">
@@ -42,14 +42,14 @@
     <!--        <button onclick="sendTokenLogout()" type="button">로그아웃</button>-->
     <!--    </a>-->
 
-    <a th:href="@{/seller/delete}" th:method="delete" enctype="multipart/form-data">
+    <a th:href="@{/seller/templates/delete}" th:method="delete" enctype="multipart/form-data">
         <button type="button" class="btn">회원탈퇴</button>
     </a>
 
-    <a href="seller-infos.html" th:href="@{/seller/infos}" th:method="get">
+    <a href="seller-infos.html" th:href="@{/seller/templates/infos}" th:method="get">
         <button type="button" class="btn">판매자 정보 수정</button>
     </a>
-    <a th:href="@{/seller/updaterestaurant}" th:method="get" enctype="multipart/form-data">
+    <a th:href="@{/seller/templates/updaterestaurant}" th:method="get" enctype="multipart/form-data">
         <button type="button" class="btn">레스토랑 정보 수정</button>
     </a>
 
