[fix] SellerManagement의 categories 필드에 Convert 적용 및 그에 따른 수정사항 반영

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -192,6 +192,8 @@
             let address = $('#sample6_address').val();
             let detailAddress = $('#sample6_detailAddress').val();
 
+            let categoryList = categories.split(" ");
+
             $.ajax({
                 type: 'POST',
                 url: `/api/seller/demand`,
@@ -203,7 +205,7 @@
                     phoneNumber: phoneNumber,
                     businessLicenseNo: businessLicenseNo,
                     restaurantName: restaurantName,
-                    categories: categories,
+                    categories: categoryList,
                     description: description,
                     zipCode: zipCode,
                     address: address,
