--- a/src/main/resources/templates/event.html
+++ b/src/main/resources/templates/event.html
@@ -119,6 +119,53 @@
     </div> <!-- /container -->
 
 
+    <!--페이징 시작-->
+    <nav class="pagenav">
+        <!--표에 사용될 변수값 초기화 -->
+        <ul class="pagination"
+            th:with="start=${T(java.lang.Math).floor(events.number/10)*10 },
+                        last=(${start + 9 < events.totalPages -1 ? start + 9 : events.totalPages -1 })">
+            <th:block th:with="
+                    firstAddr=@{/seller/templates/events(page=0)},
+                    prevAddr=@{/seller/templates/events(page=${events.number -1})},
+                    nextAddr=@{/seller/templates/events(page=${events.number + 1})},
+                    lastAddr=@{/seller/templates/events(page=${events.totalPages -1})}">
+                <li>
+                    <a th:href="${firstAddr}" aria-label="First">
+                        <span class="firstpage" aria-hidden="true"><<</span>
+                    </a>
+                </li>
+                <!-- 이전 페이지로 가기 버튼 -->
+                <li th:class="${events.first} ? 'disabled'">
+                    <a th:href="${events.first} ? '#' :${prevAddr}"
+                       aria-label="Previous">
+                        <span class="restaurantPage1" aria-hidden="true">&lt;</span>
+                    </a>
+                </li>
+                <!--1,2,3,4,.. 등 페이지-->
+                <li th:each="page: ${#numbers.sequence(start, last)}"
+                    th:class="${page == events.number + 1} ? 'active'">
+                    <a class="restaurantPage" th:text="${page}"
+                       th:href="@{/seller/templates/event(page=${page})}"></a>
+                </li>
+                <!--다음 페이지로 -->
+                <li th:class="${events.last} ? 'disabled'">
+                    <a th:href="${events.last} ? '#' : ${nextAddr}"
+                       aria-label="Next">
+                        <span class="restaurantPage2" aria-hidden="true">&gt;</span>
+                    </a>
+                </li>
+                <!--맨 마지막 페이지로 이동 -->
+                <li>
+                    <a th:href="${lastAddr}" aria-label="Last">
+                        <span class="lastpage" aria-hidden="true">>></span>
+                    </a>
+                </li>
+            </th:block>
+        </ul>
+    </nav>
+    <!--페이징끝-->
+
     <!--<script>-->
     <!--    $(document).ready(function () {-->
     <!--        $.ajax({-->
